quiz_server/public/css/style.css
/* ... */
.highscore h2 span {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    padding: 0;
    font-size: 36px;
    color: var(--light-yellow-color);
    margin: 0;
}

.highscore form {
    align-self: center;
}

.retry,
.main-menu {
    align-self: center;
    font-family: 'ringbearermedium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 36px;
    color: var(--dark-yellow-color);
    background-color: transparent;
    text-decoration: none;
    border: none;
    transition: 0.2s;
    text-shadow: 3px 3px 4px #000000;
}

.retry:hover,
.main-menu:hover {
    color: rgba(232, 208, 105, 1);
    cursor: pointer;
    text-shadow: 6px 6px 7px #000000;
}

#highscore-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    padding: 2rem 0 2rem 0;
}

#highscore-table {
    color: #fff;
    text-align: center;
    max-width: 400px;
    border: 2px #fff solid;
    margin: 0.5rem 1rem 0.5rem 1rem;
    background-color: #000000;
    border-collapse: separate;
    border-radius: 8px;
}

#highscore-table tr {
    padding: 1rem;
}

#highscore-table th {
    font-family: 'ringbearermedium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 38px;
    color: var(--light-yellow-color);
    text-shadow: 3px 3px 4px #000000;
    border-bottom: 4px #FFF solid;
    padding: 1.25rem;
}

#highscore-table td {
    font-size: 28px;
    border: 2px #FFF solid;
    padding: 1rem;
}




/*#endregion*/

/*#region--------------------------FAVORITES / BLACKLIST PAGE---------------*/

#favorites-list,
#blacklist {
    width: min(125ch, 100% - 4rem);
    margin-inline: auto;
}

.accordion {
    background: #121212;
    color: #FFF;
    width: 100%;
    height: auto;
    margin: 0 auto;
}

.accordion ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    height: auto;
}

.accordion li {
    padding: 0;
    margin: 0;
}

.accordion .quote {
    color: var(--light-yellow-color);
    font-size: 26px;
    font-family: 'ringbearermedium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-shadow: 2px 2px 3px #000000;
    border-bottom: 1px var(--dark-yellow-color) solid;
    padding: 0.5rem 0 0.5rem 0;
    margin: 0.5rem 0 0.5rem 0;
    display: flex;
    flex-direction: column;
}

#favorites-list .name button,
#blacklist .name button {
    font-size: 32px;
    color: var(--dark-yellow-color);
    text-shadow: 2px 2px 3px #000000;
    cursor: pointer;
    border: none;
    background-color: inherit;
    transition: 0.5s;
}

#favorites-list .name button:hover,
#blacklist .name button:hover {
    color: var(--light-yellow-color);
}

#favorites-list .name .content p,
#blacklist .name .content p {
    padding: 0.5rem;
}

.accordion .active {
    color: var(--light-yellow-color) !important;
}

.accordion-content {
    display: grid;
    grid-template-rows: 0fr;
    transition: grid-template-rows 1s;
}

.accordion-content[aria-hidden="false"] {
    grid-template-rows: 1fr;
}

.accordion-content>div {
    overflow: hidden;
}

.accordion-content>div:first-child {
    font-size: 20px;
}

.accordion-panel {
    padding: 2rem;
    border: 1px solid;
    margin: 0 1rem 0 1rem;
    width: 100%;
    height: auto;
}

.accordion h2 {
    position: relative;
}

.more-content {
    margin-top: 1rem;
    padding: 1rem;
    width: auto;
}

#more-info {
    font-size: 20px;
}

#more-info a,
#print-quotes {
    color: var(--dark-yellow-color);
    transition: 0.5s;
}

#more-info a:hover,
#print-quotes:hover {
    color: var(--light-yellow-color);
}

.accordion-trigger {
    background: transparent;
    border: 0;
    font: inherit;
    color: inherit;
}

.accordion-trigger.more-info {
    font-size: 26px !important;
}

.accordion-trigger::before,
.accordion-trigger::after {
    position: absolute;
    right: 1rem;
    content: "";
    display: block;
    width: 1em;
    height: 5px;
    background: currentcolor;
    transition: transform 1s;
    border-radius: 2px;
}

.accordion-trigger::after {
    rotate: 90deg;
    translate: 0 -1.5em;
}

.accordion-trigger[aria-expanded="true"]::before,
.accordion-trigger[aria-expanded="true"]::after {
    transform: rotate(45deg);
}

.accordion-trigger.more-info[aria-expanded="true"]::before,
.accordion-trigger.more-info[aria-expanded="true"]::after {
    transform: rotate(405deg);
}

#favorite-quote-container,
#blacklist-quote-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
}

#edit-reason-input-container {
    display: grid;
    grid-template-rows: 0fr;
    transition: grid-template-rows 500ms;
}

#edit-reason-input-container[aria-hidden="false"] {
    grid-template-rows: 1fr;
}

#edit-reason-input-container>container {
    overflow: hidden;
}

#edit-reason-input-container {
    padding: 1rem 0 0 0;
}

#edit-reason-input-container a {
    color: var(--dark-yellow-color);
    transition: 500ms;
    margin-left: 10px;
    font-size: 24px;
}

#edit-reason-input-container a:hover {
    color: var(--light-yellow-color);
}

#edit-reason {
    filter: invert(1);
    padding: 0 0 0 1rem;
    width: 18px;
    height: 18px;
    cursor: pointer;
    transition: 500ms;
}

#edit-reason:hover {
    transform: scale(1.1);
}

#edit-reason-text-input {
    width: 200px;
    height: 26px;
    font-size: 18px;
    vertical-align: bottom;
}

#delete-quote-article {
    max-width: 35px;
    max-height: 35px;
    align-self: center;
}

#delete-quote>img {
    width: 25px;
    height: 25px;
    transition: 500ms;
}

#delete-quote>img:hover {
    transform: scale(1.1);
}

.quote:has(+ #delete-quote-article) {
    transition: 100ms;
}

.quote:has(+ #delete-quote-article:hover) {
    text-decoration: red line-through;
    opacity: 0.85;
}
/* ... */

